--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
   <body>
     <div class="img-container">
       <img src="cocoa-logo.png">
