--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="My description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>My title</title>
+    <title>COCOA</title>
 </head>
 
 <body>
@@ -19,23 +19,24 @@
         <nav>
             <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="180"></a>
             <ul>
-                <li>Menu Item 1</li>
-                <li><a href="#section-1">Menu Item 2</a></li>
-                <li><a href="#">Dropdown Menu Item</a>
+                <li>about</li>
+                <li><a href="#section-1">people</a></li>
+                <li><a href="#section-1">results</a></li>
+                <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
                         <li><a href="#">Short sublink</a></li>
                     </ul>
-                </li>
+                </li-->
             </ul>
         </nav>
-        <h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
+        <!--h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
         <p>Page Subheading with <mark>highlighting</mark></p>
         <br>
-        <p><a href="#"><i>Italic Link Button</i></a><a href="#"><b>Bold Link Button &rarr;</b></a></p>
+        <p><a href="#"><i>Italic Link Button</i></a><a href="#"><b>Bold Link Button &rarr;</b></a></p-->
     </header>
     <main>
-        <hr>
+        <!--hr>
         <section id="section-1">
             <header>
                 <h2>Section Heading</h2>
@@ -87,7 +88,7 @@
                 </tr>
             </table>
         </section>
-        <hr>
+        <hr-->
         <article>
             <h2>Left-aligned header</h2>
             <p>Left-aligned paragraph</p>
@@ -103,7 +104,7 @@
                 <figcaption><i>Image caption</i></figcaption>
             </figure>
         </article>
-        <hr>
+        <!--hr>
         <div>
             <details>
                 <summary>Expandable title</summary>
@@ -138,7 +139,7 @@
                 <textarea cols="40" rows="5" id="textarea1"></textarea>
                 <button type="submit">Submit</button>
             </form>
-        </section>
+        </section-->
     </main>
     <footer>
         <hr>
