--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="180"></a>
+            <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="250"></a>
+            <section>
+                <figure>
+                        <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+                </figure>
+            </section>
             <ul>
                 <li>about</li>
                 <li><a href="#section-1">people</a></li>
@@ -89,10 +94,23 @@
             </table>
         </section>
         <hr-->
+
         <article>
-            <h2>Left-aligned header</h2>
-            <p>Left-aligned paragraph</p>
-            <aside>
+            <h2>About</h2>
+            <p>Eating together in a group of people, or “commensality”, is one of the most profound social experiences humans engage in. It
+                involves gathering around the table, talking, and sharing food. Also, it is one of the most common, widespread, and universal human
+                experiences in the whole history of humanity (think about our ancestors, gathering in front of the campfire and sharing hunted food).
+                Several positive impacts of commensality include food intake and choices, positive emotions, and wellbeing. Despite its importance,
+                the frequency of shared meals is decreasing, especially in industrialized countries, due to the increasing trend to live alone. Not only
+                can the lack of social eating, or commensality, have negative consequences on mental and physical health (depression, weight
+                problems), but several benefits are missing for people who have to eat alone.
+            </p>
+            <p>
+                COCOA aims to fill this gap by paving the ground toward creating interactive technologies supporting the commensality experience.
+                The project will use state-of-the art AI methods and the multimodal data of nonverbal behaviors to develop new commensal
+                activities recognition models and innovative techniques for social relations analysis and quantification in the commensality setting.
+            </p>
+            <!--aside>
                 <p>Article callout</p>
             </aside>
             <ul>
@@ -102,8 +120,9 @@
             <figure>
                 <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
                 <figcaption><i>Image caption</i></figcaption>
-            </figure>
+            </figure-->
         </article>
+
         <!--hr>
         <div>
             <details>
@@ -143,9 +162,10 @@
     </main>
     <footer>
         <hr>
-        <p>
-            <small>Contact info</small>
-        </p>
+        <section>
+            <img alt="nextgenlogo" width="450" src="signaturelogo.png">
+            <small>&copy; 2023-2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
+        </section>
     </footer>
 </body>
 
