--- a/people.html
+++ b/people.html
@@ -96,28 +96,16 @@
         <hr-->
 
         <article>
-            <h2>About</h2>
-            <p>Eating together in a group of people, or “commensality”, is one of the most profound social experiences humans engage in. It
-                involves gathering around the table, talking, and sharing food. Also, it is one of the most common, widespread, and universal human
-                experiences in the whole history of humanity (think about our ancestors, gathering in front of the campfire and sharing hunted food).
-                Several positive impacts of commensality include food intake and choices, positive emotions, and wellbeing. Despite its importance,
-                the frequency of shared meals is decreasing, especially in industrialized countries, due to the increasing trend to live alone. Not only
-                can the lack of social eating, or commensality, have negative consequences on mental and physical health (depression, weight
-                problems), but several benefits are missing for people who have to eat alone.
-            </p>
-            <p>
-                COCOA aims to fill this gap by paving the ground toward creating interactive technologies supporting the commensality experience.
-                The project will use state-of-the art AI methods and the multimodal data of nonverbal behaviors to develop new commensal
-                activities recognition models and innovative techniques for social relations analysis and quantification in the commensality setting.
-            </p>
-            <!--aside>
+            <h2>People</h2>
+            <p></p>
+            <aside>
                 <p>Article callout</p>
             </aside>
             <ul>
                 <li>List item 1</li>
                 <li>List item 2</li>
             </ul>
-            <figure>
+            <!--figure>
                 <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
                 <figcaption><i>Image caption</i></figcaption>
             </figure-->
