--- a/people.html
+++ b/people.html
@@ -98,12 +98,47 @@
         <article>
             <h2>People</h2>
             <p></p>
-            <aside>
+            <!--aside>
                 <p>Article callout</p>
-            </aside>
+            </aside-->
             <ul>
-                <li>List item 1</li>
-                <li>List item 2</li>
+                <li>Maurizio Mancini - Department of Computer Science, Sapienza University of Rome<br>
+                Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza
+                University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his
+                PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal
+                Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities,
+                enabling the user to emotionally and socially interact with the machine.</li>
+                <li>Radoslaw Niewiadomski - DIBRIS, University of Genoa<br>Radoslaw
+                Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa
+                (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied
+                conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a
+                commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on
+                “Computational Commensality”.</li>
+                <li>Selim Soufargi- Department of Computer Science, Sapienza University of Rome</li>
+                <li>Mansoor Hayat- DIBRIS, University of Genoa<br>
+                    Mansoor Hayat received his B.Sc. degree in Electrical Engineering
+                    from the University of Engineering and Technology Taxila, Pakistan,
+                    in 2015, and his M.Sc. in Electrical Engineering from the
+                    Institute of Southern Multan, Pakistan, in 2018. He also earned
+                    a Master's in Business Administration (MBA) from the National
+                    College of Business Administration and Economics, Lahore,
+                    Pakistan, in 2022. Currently, he is pursuing his Ph.D. degree
+                    in Electrical Engineering at Chulalongkorn University, Bangkok,
+                    Thailand. His research focuses on the application of computer
+                    vision, deep learning, and machine learning in imaging and
+                    video processing. He was awarded the Best Conference Paper
+                    at the 2023 IEEE Region 10 Conference (TENCON) in Chiang Mai, Thailand.</li>
+                <li>Hunter Fong - DIBRIS, University of Genoa<br>Hunter Fong is a post-doctoral researcher with
+                    a background in Psychology, User Experience/Human Factors, and
+                    Applied Statistics.  Her primary research aim is to improve the
+                    human experience: mentally, socially, and physically. She both
+                    researched and taught social, cognitive, and engineering
+                    psychology within academic settings prior to conducting HF and
+                    robotics research at NASA, Johnson Space Center (Houston), and
+                    user experience research within tech (Dell, Meta, & Google).
+                    This blended background has culminated in Hunter combining her
+                    interests and experience on the human-robot commensality project
+                    COCOA at the University of Genoa.</li>
             </ul>
             <!--figure>
                 <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
