--- a/people.html
+++ b/people.html
@@ -102,7 +102,12 @@
                 <p>Article callout</p>
             </aside-->
             <ul>
-                <li>Maurizio Mancini - Department of Computer Science, Sapienza University of Rome<br>
+                <li>
+                    <figure>
+                        <img alt="Maurizio" src="images/Maurizio.jpg">
+                        <!--figcaption><i>Image caption</i></figcaption-->
+                    </figure>
+                Maurizio Mancini - Department of Computer Science, Sapienza University of Rome<br>
                 Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza
                 University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his
                 PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal
