added photo style

--- a/people.html
+++ b/people.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="250"></a>
+            <a href="/"><img class="people" alt="Logo" src="cocoa-logo_color.png" height="250"></a>
             <section>
                 <figure>
                         <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
