--- a/people.html
+++ b/people.html
@@ -17,15 +17,15 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img class="people" alt="Logo" src="cocoa-logo_color.png" height="250"></a>
+            <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="250"></a>
             <section>
                 <figure>
                         <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
                 </figure>
             </section>
             <ul>
-                <li>about</li>
-                <li><a href="people.html">people</a></li>
+                <li><a href="index.html">about</a></li>
+                <li>people</li>
                 <li><a href="results.html">results</a></li>
                 <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
@@ -104,7 +104,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img alt="Maurizio" src="images/Maurizio.jpg">
+                        <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
                         <!--figcaption><i>Image caption</i></figcaption-->
                     </figure>
                 Maurizio Mancini - Department of Computer Science, Sapienza University of Rome<br>
