--- a/people.html
+++ b/people.html
@@ -101,26 +101,35 @@
             <!--aside>
                 <p>Article callout</p>
             </aside-->
-            <ul>
+            <ul class="people">
                 <li>
                     <figure>
                         <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
                         <!--figcaption><i>Image caption</i></figcaption-->
                     </figure>
-                Maurizio Mancini - Department of Computer Science, Sapienza University of Rome<br>
-                Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza
-                University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his
-                PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal
-                Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities,
-                enabling the user to emotionally and socially interact with the machine.</li>
-                <li>Radoslaw Niewiadomski - DIBRIS, University of Genoa<br>Radoslaw
-                Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa
-                (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied
-                conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a
-                commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on
-                “Computational Commensality”.</li>
-                <li>Selim Soufargi- Department of Computer Science, Sapienza University of Rome</li>
-                <li>Mansoor Hayat- DIBRIS, University of Genoa<br>
+                    <b>Maurizio Mancini - Department of Computer Science, Sapienza University of Rome</b><br>
+                    Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza
+                    University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his
+                    PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal
+                    Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities,
+                    enabling the user to emotionally and socially interact with the machine.</li>
+                <li>
+                    <figure>
+                        <img class="people" alt="Radoslaw" src="images/Radek.jpg">
+                        <!--figcaption><i>Image caption</i></figcaption-->
+                    </figure>
+                    <b>Radoslaw Niewiadomski - DIBRIS, University of Genoa</b><br>Radoslaw
+                    Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa
+                    (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied
+                    conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a
+                    commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on
+                    “Computational Commensality”.</li>
+                <li><b>Selim Soufargi- Department of Computer Science, Sapienza University of Rome</b></li>
+                <li><figure>
+                    <img class="people" alt="Mansoor" src="images/Mansoor.jpg">
+                    <!--figcaption><i>Image caption</i></figcaption-->
+                    </figure>
+                    <b>Mansoor Hayat- DIBRIS, University of Genoa</b><br>
                     Mansoor Hayat received his B.Sc. degree in Electrical Engineering
                     from the University of Engineering and Technology Taxila, Pakistan,
                     in 2015, and his M.Sc. in Electrical Engineering from the
@@ -133,7 +142,11 @@
                     vision, deep learning, and machine learning in imaging and
                     video processing. He was awarded the Best Conference Paper
                     at the 2023 IEEE Region 10 Conference (TENCON) in Chiang Mai, Thailand.</li>
-                <li>Hunter Fong - DIBRIS, University of Genoa<br>Hunter Fong is a post-doctoral researcher with
+                <li><figure>
+                    <img class="people" alt="Hunter" src="images/Hunter.jpg">
+                    <!--figcaption><i>Image caption</i></figcaption-->
+                    </figure>
+                    <b>Hunter Fong - DIBRIS, University of Genoa</b><br>Hunter Fong is a post-doctoral researcher with
                     a background in Psychology, User Experience/Human Factors, and
                     Applied Statistics.  Her primary research aim is to improve the
                     human experience: mentally, socially, and physically. She both
