--- a/results.html
+++ b/results.html
@@ -97,16 +97,21 @@
 
         <article>
             <h2>Results</h2>
-            <p>
-            </p>
             <!--aside>
                 <p>Article callout</p>
-            </aside>
+            </aside-->
             <ul>
-                <li>List item 1</li>
-                <li>List item 2</li>
+                <li>TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
+                    AUTHORS: Chiara Gulino and Radoslaw Niewiadomski<br>
+                    CONFERENCE: AVI2024, GENOVA
+                </li>
+                <li>TITLE: Multimodal interactive VR mindfulness experience<br>
+                    AUTHORS: Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni,
+                    Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi<br>
+                    CONFERENCE: AVI2024, GENOVA
+                </li>
             </ul>
-            <figure>
+            <!--figure>
                 <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
                 <figcaption><i>Image caption</i></figcaption>
             </figure-->
