--- a/people.html
+++ b/people.html
@@ -124,7 +124,15 @@
                     conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a
                     commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on
                     “Computational Commensality”.</li>
-                <li><b>Selim Soufargi - Department of Computer Science, Sapienza University of Rome</b></li>
+                <li><figure>
+                    <img class="people" alt="Selim" src="images/Selim.jpg">
+                    <!--figcaption><i>Image caption</i></figcaption-->
+                    </figure>
+                    <b>Selim Soufargi - Department of Computer Science, Sapienza University of Rome</b><br>
+                    Selim Soufargi is a Ph.D. researcher in computer engineering. He obtained his Ph.D. degree from the university of
+                    Calabria, Rende, Italy. Prior to that, he obtained a master’s degree in communication systems from the university of
+                    Tunis-Manar. His main research interests focus on big data management, data analysis and machine learning. He has
+                    published papers at both national and international levels.</li>
                 <li><figure>
                     <img class="people" alt="Mansoor" src="images/Mansoor.jpg">
                     <!--figcaption><i>Image caption</i></figcaption-->
