--- a/results.html
+++ b/results.html
@@ -110,12 +110,24 @@
                     Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi<br>
                     CONFERENCE: AVI2024, GENOVA
                 </li>
+                <li>TITLE: Automatic Recognition of Commensal Activities in Co-located and Online settings<br>
+                    AUTHORS: Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.<br>
+                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 5 pages, 2024
+                    10.1145/3686215.3686219
+                </li>
+                <li>TITLE: Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings<br>
+                    AUTHORS: Hoxha, A., Fong, H., Niewiadomski, R.<br>
+                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, San Jose, Costa Rica. ACM, New York, NY, USA, 7 pages, 2024
+                </li>
+                <li>TITLE: Tiuleneva M., Castano E., Niewiadomski, R.<br>
+                    AUTHORS: How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity<br>
+                    CONFERENCE: Proceedings of 12th International Conference on Affective Computing and Intelligent Interaction (ACII), September 15-18, Glasgow, UK, 2024, pp. 99-106
+                </li>
             </ul>
-            <!--figure>
-                <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
-                <figcaption><i>Image caption</i></figcaption>
-            </figure-->
         </article>
+
+
+
 
         <!--hr>
         <div>
