added cofi stuff

--- a/results.html
+++ b/results.html
@@ -100,6 +100,16 @@
             <!--aside>
                 <p>Article callout</p>
             </aside-->
+            <h3>
+                CoFI2024 Workshop <https://cofi2024.github.io/>
+            </h3>
+                Held in conjunction with the ICMI2024 ACM Conference,
+                the workshop aims to explore how interactive technology can enrich dining experiences
+                and to build an interdisciplinary community around the topics of related to commensality
+                and human-food interaction. A special focus is on the role of multimodal interaction
+                among commensal partners sharing food, being humans or artificial dining companions
+                (such as social robots).
+            <h3>Publications</h3>
             <ul>
                 <li>TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
                     AUTHORS: Chiara Gulino and Radoslaw Niewiadomski<br>
