--- a/results.html
+++ b/results.html
@@ -101,7 +101,7 @@
                 <p>Article callout</p>
             </aside-->
             <h3>
-                CoFI2024 Workshop <https://cofi2024.github.io/>
+                CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
             </h3>
                 Held in conjunction with the ICMI2024 ACM Conference,
                 the workshop aims to explore how interactive technology can enrich dining experiences
