added IUI conference

--- a/results.html
+++ b/results.html
@@ -111,6 +111,10 @@
                 (such as social robots).
             <h3>Publications</h3>
             <ul>
+			    <li>TITLE: A Social Robot Companion for Individuals Eating Alone<br>
+                    AUTHORS: Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski and Maurizio Mancini<br>
+                    CONFERENCE: 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy
+                </li>
                 <li>TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
                     AUTHORS: Chiara Gulino and Radoslaw Niewiadomski<br>
                     CONFERENCE: AVI2024, GENOVA
