--- a/results.html
+++ b/results.html
@@ -117,25 +117,29 @@
                 </li>
                 <li>TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
                     AUTHORS: Chiara Gulino and Radoslaw Niewiadomski<br>
-                    CONFERENCE: AVI2024, GENOVA
+                    CONFERENCE: AVI2024, GENOVA <br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656749">https://dl.acm.org/doi/pdf/10.1145/3656650.3656749</a>
                 </li>
                 <li>TITLE: Multimodal interactive VR mindfulness experience<br>
                     AUTHORS: Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni,
                     Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi<br>
-                    CONFERENCE: AVI2024, GENOVA
+                    CONFERENCE: AVI2024, GENOVA <br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753">https://dl.acm.org/doi/pdf/10.1145/3656650.3656753</a>
                 </li>
                 <li>TITLE: Automatic Recognition of Commensal Activities in Co-located and Online settings<br>
                     AUTHORS: Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.<br>
-                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 5 pages, 2024
-                    10.1145/3686215.3686219
+                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 5 pages, 2024<br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219">https://dl.acm.org/doi/pdf/10.1145/3686215.3686219</a>
                 </li>
                 <li>TITLE: Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings<br>
                     AUTHORS: Hoxha, A., Fong, H., Niewiadomski, R.<br>
-                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, San Jose, Costa Rica. ACM, New York, NY, USA, 7 pages, 2024
+                    CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, San Jose, Costa Rica. ACM, New York, NY, USA, 7 pages, 2024<br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220">https://dl.acm.org/doi/pdf/10.1145/3686215.3686220</a>
                 </li>
                 <li>TITLE: Tiuleneva M., Castano E., Niewiadomski, R.<br>
                     AUTHORS: How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity<br>
-                    CONFERENCE: Proceedings of 12th International Conference on Affective Computing and Intelligent Interaction (ACII), September 15-18, Glasgow, UK, 2024, pp. 99-106
+                    CONFERENCE: Proceedings of 12th International Conference on Affective Computing and Intelligent Interaction (ACII), September 15-18, Glasgow, UK, 2024, pp. 99-106<br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711">https://dl.acm.org/doi/pdf/10.1145/3656650.3656711</a>
                 </li>
             </ul>
         </article>
