added other papers

--- a/results.html
+++ b/results.html
@@ -111,33 +111,51 @@
                 (such as social robots).
             <h3>Publications</h3>
             <ul>
-			    <li>TITLE: A Social Robot Companion for Individuals Eating Alone<br>
+			    <li>
+				    TITLE: A Social Robot Companion for Individuals Eating Alone<br>
                     AUTHORS: Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski and Maurizio Mancini<br>
                     CONFERENCE: 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy
                 </li>
-                <li>TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
+                <li>
+				    TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
                     AUTHORS: Chiara Gulino and Radoslaw Niewiadomski<br>
                     CONFERENCE: AVI2024, GENOVA <br>
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656749">https://dl.acm.org/doi/pdf/10.1145/3656650.3656749</a>
                 </li>
-                <li>TITLE: Multimodal interactive VR mindfulness experience<br>
+                <li>
+				    TITLE: Multimodal interactive VR mindfulness experience<br>
                     AUTHORS: Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni,
                     Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi<br>
                     CONFERENCE: AVI2024, GENOVA <br>
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753">https://dl.acm.org/doi/pdf/10.1145/3656650.3656753</a>
                 </li>
-                <li>TITLE: Automatic Recognition of Commensal Activities in Co-located and Online settings<br>
+				<li>
+					TITLE: First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024), 
+					AUTHORS: Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.<br>
+					CONFERENCE: In Proceedings of the 26th International Conference on Multimodal Interaction (ICMI '24), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 690–693, 2024.<br>
+					PAPER:PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762">https://dl.acm.org/doi/pdf/10.1145/3678957.3685762</a>
+				</li>
+                <li>
+				    TITLE: Automatic Recognition of Commensal Activities in Co-located and Online settings<br>
                     AUTHORS: Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.<br>
                     CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 5 pages, 2024<br>
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219">https://dl.acm.org/doi/pdf/10.1145/3686215.3686219</a>
                 </li>
-                <li>TITLE: Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings<br>
+                <li>
+				    TITLE: Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings<br>
                     AUTHORS: Hoxha, A., Fong, H., Niewiadomski, R.<br>
                     CONFERENCE: International Conference on Multimodal Interaction (ICMI Companion 2024), November 4–8, San Jose, Costa Rica. ACM, New York, NY, USA, 7 pages, 2024<br>
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220">https://dl.acm.org/doi/pdf/10.1145/3686215.3686220</a>
                 </li>
-                <li>TITLE: Tiuleneva M., Castano E., Niewiadomski, R.<br>
-                    AUTHORS: How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity<br>
+				<li>
+				    TITLE: A Virtual Agent as a Commensal Companion<br>
+                    AUTHORS: Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.<br>
+                    CONFERENCE: In Proceedings of ACM International Conference on Intelligent Virtual Agents (IVA ’24), September 16–19, 2024, Glasgow, United Kingdom. ACM, New York, NY, USA, 4 pages, 2024.<br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963">https://dl.acm.org/doi/pdf/10.1145/3652988.3673963</a>
+                </li>
+                <li>
+				    AUTHORS: Tiuleneva M., Castano E., Niewiadomski, R.<br>
+                    TITLE: How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity<br>
                     CONFERENCE: Proceedings of 12th International Conference on Affective Computing and Intelligent Interaction (ACII), September 15-18, Glasgow, UK, 2024, pp. 99-106<br>
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711">https://dl.acm.org/doi/pdf/10.1145/3656650.3656711</a>
                 </li>
