added other papers (fixed small errors)

--- a/results.html
+++ b/results.html
@@ -130,10 +130,10 @@
 					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753">https://dl.acm.org/doi/pdf/10.1145/3656650.3656753</a>
                 </li>
 				<li>
-					TITLE: First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024), 
+					TITLE: First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024)<br> 
 					AUTHORS: Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.<br>
 					CONFERENCE: In Proceedings of the 26th International Conference on Multimodal Interaction (ICMI '24), November 4–8, 2024, San Jose, Costa Rica. ACM, New York, NY, USA, 690–693, 2024.<br>
-					PAPER:PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762">https://dl.acm.org/doi/pdf/10.1145/3678957.3685762</a>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762">https://dl.acm.org/doi/pdf/10.1145/3678957.3685762</a>
 				</li>
                 <li>
 				    TITLE: Automatic Recognition of Commensal Activities in Co-located and Online settings<br>
