--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 </figure>
             </section>
             <ul>
-                <li>about</li>
-                <li><a href="people.html">people</a></li>
-                <li><a href="results.html">results</a></li>
+                <li>Home</li>
+                <li><a href="people.html">Team</a></li>
+                <li><a href="results.html">Publications</a></li>
+                <li><a href="outreach.html">Outreach</a></li>
                 <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
@@ -96,7 +97,7 @@
         <hr-->
 
         <article>
-            <h2>About</h2>
+            <h2>Our Mission</h2>
             <p>Eating together in a group of people, or “commensality”, is one of the most profound social experiences humans engage in. It
                 involves gathering around the table, talking, and sharing food. Also, it is one of the most common, widespread, and universal human
                 experiences in the whole history of humanity (think about our ancestors, gathering in front of the campfire and sharing hunted food).
@@ -121,6 +122,9 @@
                 <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
                 <figcaption><i>Image caption</i></figcaption>
             </figure-->
+
+            <h2>Our Timeline</h2>
+            <p> Photo timeline to be updated.</p>
         </article>
 
         <!--hr>
