--- a/results.html
+++ b/results.html
@@ -24,9 +24,10 @@
                 </figure>
             </section>
             <ul>
-                <li><a href="index.html">about</a></li>
-                <li><a href="people.html">people</a></li>
-                <li>results</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="people.html">Team</a></li>
+                <li>Publications</li>
+                <li><a href="outreach.html">Outreach</a></li>
                 <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
@@ -96,20 +97,7 @@
         <hr-->
 
         <article>
-            <h2>Results</h2>
-            <!--aside>
-                <p>Article callout</p>
-            </aside-->
-            <h3>
-                CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
-            </h3>
-                Held in conjunction with the ICMI2024 ACM Conference,
-                the workshop aims to explore how interactive technology can enrich dining experiences
-                and to build an interdisciplinary community around the topics of related to commensality
-                and human-food interaction. A special focus is on the role of multimodal interaction
-                among commensal partners sharing food, being humans or artificial dining companions
-                (such as social robots).
-            <h3>Publications</h3>
+            <h2>Publications</h2>
             <ul>
 			    <li>
 				    TITLE: A Social Robot Companion for Individuals Eating Alone<br>
