--- a/outreach.html
+++ b/outreach.html
@@ -25,9 +25,9 @@
             </section>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li>Team</li>
+                <li><a href="people.html">Team</a></li>
                 <li><a href="results.html">Publications</a></li>
-                <li><a href="outreach.html">Outreach</a></li>
+                <li>Outreach</a></li>
                 <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
@@ -97,64 +97,23 @@
         <hr-->
 
         <article>
-            <h2>People</h2>
-            <p></p>
+            <h2>Outreach</h2>
             <!--aside>
                 <p>Article callout</p>
             </aside-->
-            <ul class="people">
-                <li>
-                    <figure>
-                        <img class="people" alt="Maurizio" src="images/Maurizio.jpg">
-                        <!--figcaption><i>Image caption</i></figcaption-->
-                    </figure>
-                    <b>Maurizio Mancini - Department of Computer Science, Sapienza University of Rome</b><br>
-                    Maurizio Mancini is an Associate Professor at the Department of Computer Science, Sapienza
-                    University of Rome. Earlier, he was Lecturer at the School of Computer Science and IT, University College Cork. He earned his
-                    PhD in Computer Science (HCI) in February 2008, at the University of Paris 8. He conducts research in the field of Multimodal
-                    Interfaces and Affective/Social Computing, in which he investigates computer interfaces having bodies and nonverbal capabilities,
-                    enabling the user to emotionally and socially interact with the machine.</li>
-                <li>
-                    <figure>
-                        <img class="people" alt="Radoslaw" src="images/Radek.jpg">
-                        <!--figcaption><i>Image caption</i></figcaption-->
-                    </figure>
-                    <b>Radoslaw Niewiadomski - DIBRIS, University of Genoa</b><br>Radoslaw
-                    Niewiadomski is an Assistant Professor at DIBRIS, University of Genoa
-                    (Italy). His research interests include recognition of emotions, nonverbal behavior synthesis and interaction with embodied
-                    conversational agents and social robots. He is co-PI of COCOA project aiming to investigate human-human interactions in a
-                    commensal setting and to develop artificial commensal companions, and Guest Editor of the Special Research Topic on
-                    “Computational Commensality”.</li>
-                <li><figure>
-                    <img class="people" alt="Selim" src="images/Selim.jpg">
-                    <!--figcaption><i>Image caption</i></figcaption-->
-                    </figure>
-                    <b>Selim Soufargi - Department of Computer Science, Sapienza University of Rome</b><br>
-                    Selim Soufargi is a Ph.D. researcher in computer engineering. He obtained his Ph.D. degree from the university of
-                    Calabria, Rende, Italy. Prior to that, he obtained a master’s degree in communication systems from the university of
-                    Tunis-Manar. His main research interests focus on big data management, data analysis and machine learning. He has
-                    published papers at both national and international levels.</li>
-                <li><figure>
-                    <img class="people" alt="Hunter" src="images/Hunter.jpg">
-                    <!--figcaption><i>Image caption</i></figcaption-->
-                    </figure>
-                    <b>Hunter Fong - DIBRIS, University of Genoa</b><br>Hunter Fong is a post-doctoral researcher with
-                    a background in Psychology, User Experience/Human Factors, and
-                    Applied Statistics.  Her primary research aim is to improve the
-                    human experience: mentally, socially, and physically. She both
-                    researched and taught social, cognitive, and engineering
-                    psychology within academic settings prior to conducting HF and
-                    robotics research at NASA, Johnson Space Center (Houston), and
-                    user experience research within tech (Dell, Meta, & Google).
-                    This blended background has culminated in Hunter combining her
-                    interests and experience on the human-robot commensality project
-                    COCOA at the University of Genoa.</li>
-            </ul>
-            <!--figure>
-                <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
-                <figcaption><i>Image caption</i></figcaption>
-            </figure-->
+            <h3>
+                CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
+            </h3>
+                Held in conjunction with the ICMI2024 ACM Conference,
+                the workshop aims to explore how interactive technology can enrich dining experiences
+                and to build an interdisciplinary community around the topics of related to commensality
+                and human-food interaction. A special focus is on the role of multimodal interaction
+                among commensal partners sharing food, being humans or artificial dining companions
+                (such as social robots).
         </article>
+
+
+
 
         <!--hr>
         <div>
