--- a/outreach.html
+++ b/outreach.html
@@ -101,6 +101,11 @@
             <!--aside>
                 <p>Article callout</p>
             </aside-->
+             <section>
+                <figure>
+                        <img alt="ICMI" width="250" src="ICMIgroup.png">
+                </figure>
+            </section>
             <h3>
                 CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
             </h3>
