--- a/outreach.html
+++ b/outreach.html
@@ -103,7 +103,7 @@
             </aside-->
              <section>
                 <figure>
-                        <img alt="ICMI" width="250" src="ICMIgroup.png">
+                        <img alt="ICMI" width="250" src="ICMIGroup.png">
                 </figure>
             </section>
             <h3>
