--- a/outreach.html
+++ b/outreach.html
@@ -101,13 +101,14 @@
             <!--aside>
                 <p>Article callout</p>
             </aside-->
-             <section>
-                <figure>
-                        <img alt="ICMI" width="250" src="ICMIGroup.png">
-                </figure>
-            </section>
+       
             <h3>
                 CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
+                      <section>
+                <figure>
+                        <img alt="ICMI" width="250" src="images/ICMIGroup.png">
+                </figure>
+            </section>
             </h3>
                 Held in conjunction with the ICMI2024 ACM Conference,
                 the workshop aims to explore how interactive technology can enrich dining experiences
