--- a/outreach.html
+++ b/outreach.html
@@ -106,7 +106,7 @@
                 CoFI2024 Workshop <a href="https://cofi2024.github.io">https://cofi2024.github.io</a>
                       <section>
                 <figure>
-                        <img alt="ICMI" width="250" src="images/ICMIGroup.png">
+                        <img alt="ICMI" width="250" src="images/ICMIGroup.jpeg">
                 </figure>
             </section>
             </h3>
