added IUI conference paper

--- a/results.html
+++ b/results.html
@@ -102,7 +102,8 @@
 			    <li>
 				    TITLE: A Social Robot Companion for Individuals Eating Alone<br>
                     AUTHORS: Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski and Maurizio Mancini<br>
-                    CONFERENCE: 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy
+                    CONFERENCE: 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy <br>
+					PAPER: <a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340">https://dl.acm.org/doi/pdf/10.1145/3708557.3716340</a>
                 </li>
                 <li>
 				    TITLE: Sounding bodies: Exploring sonification to promote physical contact<br>
