--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <figure>
                         <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
                 </figure>
+             <h1>COmputational Models of COmmensality for artificial Agents (COCOA)</h1> 
             </section>
             <ul>
                 <li>Home</li>
