--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
 
     <title>COCOA</title>
 </head>
-
 <body>
     <header>
         <nav>
             <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="250"></a>
-            <section>
-                             <h1>COmputational Models of COmmensality for artificial Agents (COCOA)</h1> 
-                <figure>
-                        <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-                </figure>
-            </section>
-            <ul>
-                <li>Home</li>
-                <li><a href="people.html">Team</a></li>
-                <li><a href="results.html">Publications</a></li>
-                <li><a href="outreach.html">Outreach</a></li>
-                <!--li><a href="#">Dropdown Menu Item</a>
-                    <ul>
-                        <li><a href="#">Sublink with a long name</a></li>
-                        <li><a href="#">Short sublink</a></li>
-                    </ul>
-                </li-->
-            </ul>
+        </nav>
+    </header>
+
+    <section style="text-align: center; margin-top: 20px;">
+        <h1>Computational Models of COmmensality for artificial Agents (COCOA)</h1>
+        <figure>
+            <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+        </figure>
+    </section>
+
+    <ul>
+        <li>Home</li>
+        <li><a href="people.html">Team</a></li>
+        <li><a href="results.html">Publications</a></li>
+        <li><a href="outreach.html">Outreach</a></li>
+    </ul>
+
+           
         </nav>
         <!--h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
         <p>Page Subheading with <mark>highlighting</mark></p>
