--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
         </nav>
     </header>
 
-    <section style="text-align: center; margin-top: 20px;">
-        <h1>Computational Models of COmmensality for artificial Agents (COCOA)</h1>
-        <figure>
-            <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-        </figure>
-    </section>
+    <h1 style="text-align: center;">Computational Models of COmmensality for artificial Agents (COCOA)</h1>
+    
+    <figure style="text-align: center;">
+        <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+    </figure>
 
     <ul>
         <li>Home</li>
@@ -33,8 +32,11 @@
         <li><a href="results.html">Publications</a></li>
         <li><a href="outreach.html">Outreach</a></li>
     </ul>
+</body>
 
-           
+
+
+  
         </nav>
         <!--h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
         <p>Page Subheading with <mark>highlighting</mark></p>
