--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
     </figure>
 
-    <ul>
-        <li>Home</li>
+    <ul style="display: flex; justify-content: space-around; list-style-type: none; padding: 0; margin-top: 20px;">
+        <li><a href="/">Home</a></li>
         <li><a href="people.html">Team</a></li>
         <li><a href="results.html">Publications</a></li>
         <li><a href="outreach.html">Outreach</a></li>
