--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <h1 style="text-align: center;">Computational Models of COmmensality for artificial Agents (COCOA)</h1>
+    <h1 style="text-align: center;">COmputational Models of COmmensality for artificial Agents (COCOA)</h1>
     
     <figure style="text-align: center;">
         <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
