--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
             </figure-->
 
             <h2>Our Timeline</h2>
-            <p> Photo timeline to be updated.</p>
+            <div style="text-align: center;">
+  <a href="index.html#project-progress">
+    <img src="images/COCOAtimelineclear.png" alt="COCOA Timeline" style="max-width: 100%; height: auto;">
+  </a>
+</div>
+
         </article>
 
         <!--hr>
