--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <ul style="display: flex; justify-content: space-around; list-style-type: none; padding: 0; margin-top: 20px;">
         <li><a href="/">Home</a></li>
         <li><a href="people.html">Team</a></li>
+        <li><a href="projectprogress.html">Project Progress</a></li>
         <li><a href="results.html">Publications</a></li>
-        <li><a href="outreach.html">Outreach</a></li>
+        <li><a href="outreach.html">Research Dissemination</a></li>
+        
     </ul>
 </body>
 
@@ -127,7 +129,7 @@
 
             <h2>Our Timeline</h2>
             <div style="text-align: center;">
-  <a href="index.html#project-progress">
+  <a href="projectprogress.html">
     <img src="images/COCOAtimelineclear.png" alt="COCOA Timeline" style="max-width: 100%; height: auto;">
   </a>
 </div>
