--- a/outreach.html
+++ b/outreach.html
@@ -24,10 +24,11 @@
                 </figure>
             </section>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="people.html">Team</a></li>
-                <li><a href="results.html">Publications</a></li>
-                <li>Outreach</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="people.html">Team</a></li>
+        <li><a href="projectprogress.html">Project Progress</a></li>
+        <li><a href="results.html">Publications</a></li>
+        <li><a href="outreach.html">Research Dissemination</a></li>
                 <!--li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
