--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <head>
     <link rel="icon" href="https://via.placeholder.com/70x70">
     <link rel="stylesheet" href="./mvp.css">
+  <style>
+    body {
+      background-color: #ffffff; /* white, or change it */
+    }
+  </style>
 
     <meta charset="utf-8">
     <meta name="description" content="My description">
